# algoritmos

./: .gitignore  CMakeLists.txt
Semana01/: cli.py  generate_star.py  inside_polygon.py
Semana01/data/: brasil.txt  rotated_square.txt  star.txt
semana01/: cli.py  espiral.ipynb  generate_star.py  inside_polygon.py  performance.py  run_all_countries.sh
semana01/data/: alien.txt  bicos.txt  map.eps.txt  marajo.txt  quina_poligono.txt  spiral.txt  star_5.txt  star_7.txt
semana01/tex/: main.tex
semana02/: CMakeLists.txt  CornExample.ipynb  cli.cpp  cli.py  generate_plots.sh  plot_isinside.py  plot_triangs.py  polygon.cpp  polygon.h  tests.py  triang.cpp  triangulate.py
semana02/data/: asadelta.txt  paralelogramo.txt
semana02/data/caxeiro/: polygon_1000.txt  polygon_10000.txt  polygon_10000_1.txt  polygon_10000_2.txt  polygon_10000_3.txt  polygon_10000_4.txt  polygon_10000_5.txt  polygon_10000_6.txt  polygon_10000_7.txt  polygon_10000_8.txt  polygon_10000_9.txt  polygon_1000_1.txt  polygon_1000_3.txt  polygon_1000_6.txt  polygon_1000_7.txt  polygon_1000_8.txt  polygon_100_6.txt  polygon_10_5.txt  polygon_5000_1.txt  polygon_5000_2.txt  polygon_5000_3.txt  polygon_5000_4.txt  polygon_5000_5.txt  polygon_5000_6.txt  polygon_5000_7.txt  polygon_5000_8.txt  polygon_5000_9.txt  polygon_500_1.txt  polygon_500_3.txt  polygon_500_8.txt  polygon_50_9.txt
semana02/data/regular/: regular_10.txt  regular_100.txt  regular_1000.txt  regular_10000.txt  regular_100000.txt
semana02/data/spiral/: spiral_10.txt  spiral_100.txt  spiral_1000.txt  spiral_10000.txt  spiral_100000.txt
semana02/results/: execucoes.txt  plot_graph.ipynb
semana02/tests/: CMakeLists.txt  is_inside_test.cpp  semi_polygon_test.cpp  triangulate_test.cpp
semana02/tex/: main.tex
semana03/: CMakeLists.txt  convex_hull_main.cpp  jarvis.cpp  jarvis.h  plots.ipynb  random_points.cpp  random_points.h  read_convex.py  run_circles.sh
semana03/data/: alien.txt  alien_no_duplicates.txt
semana03/tex/: main.tex
semana03/tex/figures/: points.tex  points_hull.tex
semana03/tex/figures/algs/: jarvis_0.tex  jarvis_1.tex  jarvis_10.tex  jarvis_2.tex  jarvis_3.tex  jarvis_4.tex  jarvis_5.tex  jarvis_6.tex  jarvis_7.tex  jarvis_8.tex  jarvis_9.tex  naive.tex  naive_0.tex  naive_1.tex  naive_2.tex  naive_3.tex  naive_4.tex  naive_5.tex  segments_0.tex  segments_1.tex
semana03/tex/tables/: random_points.csv
semana04/: CMakeLists.txt  graham.cpp  graham.h  main.cpp  plots_semana04.ipynb  point.h  run_circles.sh  sort_algs.h  utilities.cpp  utilities.h
semana04/tex/: main.tex
semana04/tex/figures/: points.tex
semana05/: CMakeLists.txt  bom_exemplo.json  bom_exemplo_graham.json  bom_exemplo_graham_2.json  plots_semana05.ipynb  points_triangulation.cpp  points_triangulation.h  run_circles.sh  run_shapes.sh  semana05.cpp  triangulation_tests.cpp
semana05/data/: bom_exemplo_0.txt  bom_exemplo_1.txt  bom_exemplo_2.txt  problem.txt
semana05/tex/: semana05.tex
semana05/tex/tikz_figs/: first_example.tex  graham_triang.tex  second_example.tex  trig_alg.tex
semana06/: CMakeLists.txt  avl_tree.cpp  binary_tree.cpp  binary_tree.h  data_structures.cpp  data_structures.hpp  event.cpp  event.hpp  experiments_detection.sh  generate_cases.cpp  intersect_detection.cpp  intersection_detection.h  plot01.sh  plot_big.sh  plot_grid.sh  plot_intersections.py  plot_nintersects.sh  plot_random.sh  plots_semana06.ipynb  run_experiments.sh  segment.cpp  segment.hpp  segment_detection.cpp  segment_detection.h  semana06.cpp
semana06/data/: ex1.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  ex7.txt  ex7_simp.txt  ex8.txt  exemplo_slide.txt  exemplo_slide_2.txt  test_data_00.json  test_data_01.json  test_data_02.json  test_data_03.json  test_data_04.json  test_data_05.json  test_data_06.json  test_data_07.json  test_data_08.json  test_data_09.json  test_data_10.json  test_data_11.json  test_data_12.json  test_data_13.json  test_data_14.json  test_data_15.json  test_data_16.json  test_data_17.json  test_data_18.json  test_data_19.json
semana06/tests/: CMakeLists.txt  avl_tree_test.cpp  generate_test_data.cpp  intersection_test.cpp  simple_test.cpp
semana06/tex/: semana06.tex
semana06/tex/figs/exemplos/: comp_seg.tex
semana07/: .gitignore  airports.py  graph.py  plots.ipynb  test_graph.py
semana07/tex/: semana07.tex
semana07/tex/figs/: bfs.tex  dfs.tex
semana08/: dag_generator.py  digraph.py  semana08.ipynb  test_digraph.py
semana08/tex/: semana08.tex
semana09/: semana09.ipynb  semana09_anac.ipynb  test_mst.py  weighted_graph.py
semana09/tex/: semana09.tex
semana10/: .gitignore  dag_generator.py  semana10.ipynb  test_weighted_digraph.py  weighted_digraph.py
semana10/tex/: dikjstra_example.tex  negative_edge_example.tex  semana10.tex
